# CroniCloud

./: .gitignore  CroniCloud.js  CroniCloud.py  index.html  package-lock.json  package.json  pyproject.toml  scripts.js  styles.css
app/: index.html  scripts.js
core/: LoggingTools.py  backup.py
data/: backup.json
static/js/: scripts.js
templates/: index.html
